--- a/code/balancer/config/pod-spec.yaml
+++ b/code/balancer/config/pod-spec.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: go-server-pod
+  namespace: tech-tornadoes-project
   labels:
     app: go-server
 spec:
