--- a/PracticeTasks/module_2/code/balancer/config/pod-spec.yaml
+++ b/PracticeTasks/module_2/code/balancer/config/pod-spec.yaml
@@ -1,10 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: go-server-pod
+  name: go-server
   namespace: tech-tornadoes-project
-  labels:
-    app: go-server
 spec:
   containers:
     - name: go-server
